# mahi

./: .flake8  .gitignore  Dockerfile  Makefile  alembic.ini  database.db  docker-compose.yml  pyproject.toml  pytest.ini  settings.ini
.github/workflows/: ci.yml  python-app.yml
alembic/: env.py
alembic/versions/: 079c5364b505_user_table_v2.py  271b15167c83_added_user_table.py  924e376c4199_user_table.py  b039f0abbe4d_user_table_v1.py
app/: db.py  main.py
app/api/: deps.py  exceptions.py  router.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: users.py  utils.py
app/api/api_v1/endpoints/auth/: authentication.py  users.py
app/api/api_v1/endpoints/tasks/: projects.py  reactions.py  sections.py  tag_items.py  tags.py  task_items.py
app/api/api_v1/endpoints/todos/: projects.py  tags.py  todo_items.py
app/core/: celery_app.py  config.py  exceptions.py  security.py
app/db/: base.py  base_class.py  session.py  types.py
app/managers/: __init__.py  base.py  project.py  reaction.py  section.py  tag.py  task.py  tasks.py  user.py  users.py
app/models/: __init__.py  base.py  comment.py  link_tables.py  project.py  reaction.py  section.py  tag.py  task.py  tasks.py  todo.py  user.py
app/schemas/: __init__.py  events.py  project.py  reactions.py  section.py  subtasks.py  tag_item.py  tags.py  tasks.py  todos.py  token.py  users.py
app/sse/: kafka.py  notifications.py  project.py  tasks.py  test.py
scripts/: dev.py  prod.py
src/: main.py
src/api/: router.py
src/api/api_v1/endpoints/: utils.py
src/core/: celery_app.py  config.py  exceptions.py
src/models/: user.py
tests/: conftest.py  test_client.py  test_database.py
tests/common/: conftest.py  test_base_manager.py  test_common_api.py  test_notifications.py  test_project_sse.py  test_router.py  test_security.py  test_sse.py
tests/projects/: conftest.py  test_project_api.py  test_project_models.py
tests/tasks/: conftest.py  test_activity_tracking.py  test_models.py  test_reorder_tasks.py  test_reorder_tasks_in_section.py  test_tasks.py  test_tasks_api.py
tests/users/: test_api.py  test_dependencies.py  test_user_manager.py
