[tool.poetry]
name = "mahi"
version = "0.1.0"
description = ""
authors = ["pykulytsky <pykulytsky@gmail.com>"]
license = "MIT"

packages = [
    {include="scripts", from="."}
]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.0"
psycopg2 = "^2.9.3"
fastapi = "^0.78.0"
httpx = "^0.23.0"
pydantic = {extras = ["email", "dotenv"], version = "^1.9.1"}
sentry-sdk = "^1.7.0"
SQLAlchemy = "^1.4.39"
websockets = "^10.3"
uvicorn = "^0.18.2"
celery = "^5.2.7"
PyJWT = "1.7.1"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-env = "^0.6.2"
flake8 = "^4.0.1"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
pytest-picked = "^0.4.6"
black = "^22.6.0"
autopep8 = "^1.6.0"
isort = "^5.10.1"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = 'scripts.dev:main'
prod = 'scripts.prod:main'
